tests/miniJava/neg/004418_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] false ( ) { return 0 ; } }
